# Uni-Tasks

./: Uni-Tasks.sln
Uni-Tasks/: CMakeLists.txt  CoinScale.h  TowerOFHanoi.cpp  Uni-Tasks.cpp  Uni-Tasks.vcxproj  Uni-Tasks.vcxproj.filters  uni.h
Uni-Tasks/Text/: TowerOfHanoi.txt
Uni-Tasks/src/: 2nDisks.cpp  Anagrams.cpp  CoinScale.cpp  InvokeTasks.cpp  TextWrapping.cpp  TowerOFHanoi.cpp  main.cpp  main.h  uni.h
Uni-Tasks/src/Maze/: Maze.cpp
Uni-Tasks/src/ParellelProgamming/: Student.h  test.txt
Uni-Tasks/src/Sorting/: Excel.cpp  Excel.h  JSONBuilder.cpp  JSONBuilder.h  Sort.cpp  SortingTester.cpp  SortingTester.h  Test.cpp  Timer.h
Uni-Tasks/src/Task-1/: Anagram.cpp  anagram.h
Uni-Tasks/src/Task-2/: CoinScale.cpp  scale.h
Uni-Tasks/src/Task-3/: Excel.h  JSONBuilder.cpp  SortingTester.h  Test.cpp  Timer.h  arraytest.h  comparisons.json  output.xlsx
Uni-Tasks/src/Task-4/: TowerOfHanoi.cpp  TowerOfHanoiGui.py  hanoi.h  output.txt
Uni-Tasks/src/Task-5/: 2nDisks.cpp  sortdisks.h
Uni-Tasks/src/Task-6/: TextWrapping.cpp  textwrapping.h
Uni-Tasks/src/Task-7/: Maze.cpp  maze.h  mazeGUI.py  maze_output.txt
Uni-Tasks/src/Task-8/: LinkedList.cpp  ParallelReader.cpp  linkedlist.h  parallelreader.h  readstudents.h  student.cpp  student.h  students.txt
